Add necessary Java 9 configuration options to the startup scripts to prevent warnings being generated on web application stop.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1810585 13f79535-47bb-0310-9956-ffa450edef68